--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+<!--including header partials-->
 <%- include("./partials/header.ejs") %>
 
     <div class="container mx-auto  mb-5 w-50">
@@ -10,6 +11,7 @@
             <input type="text" name="description" id="" placeholder="Enter your task..." class="w-100 form-control"
                 required />
             <hr>
+            <!--category-->
             <div class="d-flex flex-row justify-content-between align-items-center">
                 <div class="dropdown mb-3 d-flex flex-column">
                     <label for="dropdownMenu2">CATEGORY</label>
@@ -34,6 +36,8 @@
         </form>
         <hr>
         <h2>To Do List</h2>
+
+        <!--todolist display-->
         <ul class="list-group">
             <% todo.forEach(todos=>{%>
                 <li class="list-group-item d-flex flex-row justify-content-between w-100">
@@ -57,4 +61,5 @@
         </ul>
     </div>
 
+    <!--including footer partials-->
     <%- include('./partials/footer.ejs') %>
